# flowgentra-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  compilation_errors.json  deny.toml
erenflow-ai/: CONFIG_FEATURES.md  CONFIG_GUIDE.md  Cargo.toml  DEVELOPER_GUIDE.md  DOCS_SUMMARY.md  DOCUMENTATION.md  FEATURES.md  QUICKSTART.md  config.yaml.template
erenflow-ai-macros/: Cargo.toml
erenflow-ai-macros/src/: lib.rs
erenflow-ai/examples/: simple_agent.rs
erenflow-ai/examples/qa_agent/: .env.example  Cargo.toml  README.md  config.yaml
erenflow-ai/examples/qa_agent/src/: handlers.rs  main.rs
erenflow-ai/src/: lib.rs  main.rs
erenflow-ai/src/core/: mod.rs
erenflow-ai/src/core/agent/: mod.rs
erenflow-ai/src/core/agents/: builders.rs  conversational.rs  few_shot_react.rs  mod.rs  prompts.rs  zero_shot_react.rs
erenflow-ai/src/core/builder/: builders.rs  mod.rs
erenflow-ai/src/core/config/: mod.rs
erenflow-ai/src/core/error/: mod.rs
erenflow-ai/src/core/evaluation/: confidence.rs  grader.rs  middleware.rs  mod.rs  retry.rs  scorer.rs
erenflow-ai/src/core/graph/: compiler.rs  mod.rs  routing.rs
erenflow-ai/src/core/health/: checks.rs  mod.rs
erenflow-ai/src/core/llm/: anthropic.rs  azure.rs  factory.rs  groq.rs  mistral.rs  mod.rs  ollama.rs  openai.rs
erenflow-ai/src/core/mcp/: mod.rs
erenflow-ai/src/core/memory/: checkpointer.rs  conversation.rs  mod.rs
erenflow-ai/src/core/middleware/: interceptors.rs  mod.rs
erenflow-ai/src/core/node/: advanced_nodes.rs  builtin_nodes.rs  mod.rs  nodes_trait.rs  planner.rs
erenflow-ai/src/core/observability/: middleware.rs  mod.rs  trace.rs  types.rs  ui.rs
erenflow-ai/src/core/rag/: embeddings.rs  handlers.rs  mod.rs  retrievers.rs  vector_db.rs
erenflow-ai/src/core/runtime/: context.rs  mod.rs  parallel.rs
erenflow-ai/src/core/state/: mod.rs  state_validation.rs
erenflow-ai/src/core/tools/: builtin.rs  mod.rs
erenflow-ai/src/core/utils/: debug.rs  mod.rs  tracing.rs  visualization.rs
flowgentra-ai/: .env  Cargo.toml
flowgentra-ai-macros/: Cargo.toml
flowgentra-ai-macros/src/: lib.rs
flowgentra-ai/benches/: core_benches.rs
flowgentra-ai/docs/: CONFIG_FEATURES.md  CONFIG_GUIDE.md  DEVELOPER_GUIDE.md  DOCS_SUMMARY.md  DOCUMENTATION.md  FEATURES.md  QUICKSTART.md  README.md  STATE_GRAPH_DESIGN.md  STATE_GRAPH_QUICK_REFERENCE.md  config.yaml.template
flowgentra-ai/docs/agents/: README.md  conversational.md  few-shot-react.md  react-docstore.md  self-ask-with-search.md  structured-chat.md  tool-calling.md  zero-shot-react.md
flowgentra-ai/docs/configuration/: CONFIG_FEATURES.md  CONFIG_GUIDE.md
flowgentra-ai/docs/development/: DEVELOPER_GUIDE.md
flowgentra-ai/docs/evaluation/: README.md
flowgentra-ai/docs/graph/: README.md
flowgentra-ai/docs/handlers/: README.md
flowgentra-ai/docs/llm/: README.md
flowgentra-ai/docs/macros/: README.md
flowgentra-ai/docs/memory/: README.md
flowgentra-ai/docs/observability/: README.md
flowgentra-ai/docs/planning/: README.md
flowgentra-ai/docs/rag/: README.md
flowgentra-ai/docs/state/: README.md
flowgentra-ai/docs/testing/: README.md
flowgentra-ai/docs/tools/: README.md
flowgentra-ai/src/: lib.rs  main.rs
flowgentra-ai/src/core/: examples.rs  mod.rs  prelude.rs  validation.rs
flowgentra-ai/src/core/agent/: memory_aware.rs  mod.rs  state_graph_bridge.rs
flowgentra-ai/src/core/agents/: builders.rs  conversational.rs  few_shot_react.rs  graph_nodes.rs  mod.rs  prompts.rs  react_docstore.rs  self_ask_with_search.rs  structured_chat.rs  supervisor.rs  tool_calling.rs  zero_shot_react.rs
flowgentra-ai/src/core/builder/: builders.rs  mod.rs
flowgentra-ai/src/core/config/: mod.rs
flowgentra-ai/src/core/db/: mod.rs
flowgentra-ai/src/core/error/: mod.rs
flowgentra-ai/src/core/evaluation/: confidence.rs  evaluation_node.rs  grader.rs  middleware.rs  mod.rs  reporting.rs  retry.rs  scorer.rs  smart_fallback.rs
flowgentra-ai/src/core/graph/: analysis.rs  compiler.rs  mod.rs  routing.rs
flowgentra-ai/src/core/llm/: adapter.rs  anthropic.rs  azure.rs  cache.rs  chain.rs  factory.rs  fallback.rs  groq.rs  huggingface.rs  mistral.rs  mock.rs  mod.rs  ollama.rs  openai.rs  output_parser.rs  prompt_template.rs  retry.rs  secret.rs  token_counter.rs
flowgentra-ai/src/core/mcp/: docker.rs  factory.rs  mod.rs  sse.rs  sse_protocol.rs  stdio.rs
flowgentra-ai/src/core/memory/: async_checkpointer.rs  checkpointer.rs  config.rs  conversation.rs  mod.rs  postgres_checkpointer.rs  redis_checkpointer.rs  sqlite_checkpointer.rs  summary.rs
flowgentra-ai/src/core/middleware/: interceptors.rs
flowgentra-ai/src/core/node/: advanced_nodes.rs  agent_or_graph_node.rs  builtin_nodes.rs  evaluation_node.rs  memory_handlers.rs  mod.rs  nodes_trait.rs  orchestrator_node.rs  planner.rs
flowgentra-ai/src/core/observability/: dev_server.rs  events.rs  graph_visualizer.rs  middleware.rs  mod.rs  otel.rs  prometheus.rs  replay.rs  trace.rs  types.rs  ui.rs  visualization.rs
flowgentra-ai/src/core/plugins/: context.rs  mod.rs  registry.rs
flowgentra-ai/src/core/rag/: astra_db.rs  bm25_retriever.rs  cache.rs  chroma.rs  compression_retriever.rs  cross_encoder.rs  dedup.rs  doc_store.rs  document_loader.rs  elasticsearch.rs  embeddings.rs  ensemble_retriever.rs  evaluation.rs  extra_embeddings.rs  extra_vector_stores.rs  filter.rs  handlers.rs  hnsw_store.rs  http_helpers.rs  huggingface_embeddings.rs  hybrid.rs  indexing.rs  ingestion.rs  milvus.rs  mistral_embeddings.rs  mod.rs  mongodb_atlas.rs  multi_query_retriever.rs  multi_vector_retriever.rs  ollama_embeddings.rs  openai_embeddings.rs  opensearch.rs  parent_doc_retriever.rs  pdf.rs  persistence.rs  pgvector.rs  redis_vector.rs  reorder.rs  reranker.rs  retriever.rs  (+10 more)
flowgentra-ai/src/core/reducer/: mod.rs
flowgentra-ai/src/core/runtime/: context.rs  mod.rs  optimization.rs  parallel.rs
flowgentra-ai/src/core/skills/: mod.rs
flowgentra-ai/src/core/state/: channel.rs  checkpointer.rs  mod.rs  (+11 more)
flowgentra-ai/tests/: integration_tests.rs  state_validation.rs
(+94 files in other folders)
