[workspace]
members = [
    "flowgentra-ai",
    "flowgentra-ai-macros",
    "rag-example",
    ]

resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Oussama Ben Hariz"]
license = "MIT"
repository = "https://github.com/oussamabenhariz/FlowgentraAI"
homepage = "https://github.com/oussamabenhariz/FlowgentraAI"
