[workspace]
members = [
    "flowgentra-ai",
    "flowgentra-ai-macros",
    ]

resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"
authors = ["Oussama Ben Hariz"]
license = "MIT"
repository = "https://github.com/oussamabenhariz/flowgentra-ai"
homepage = "https://github.com/oussamabenhariz/flowgentra-ai"
