[workspace]
members = [
    "flowgentra-ai",
    "flowgentra-ai-macros",
    ]

resolver = "2"

[workspace.package]
version = "0.2.2"
edition = "2021"
authors = ["Oussama Ben Hariz"]
license = "MIT"
repository = "https://github.com/oussamabenhariz/flowgentra-ai"
homepage = "https://github.com/oussamabenhariz/flowgentra-ai"
