[package]
name = "erenflow-ai"
version.workspace = true
edition.workspace = true
description = "A LangGraph-inspired Rust library for building AI agents with graphs"
authors.workspace = true
license.workspace = true
repository = "https://github.com/oussamabenhariz/ErenFlowAI"
homepage = "https://github.com/oussamabenhariz/ErenFlowAI"
documentation = "https://docs.rs/erenflow-ai"
keywords = ["ai", "agent", "llm", "graph", "workflow"]
categories = ["algorithms", "development-tools"]
readme = "../README.md"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Async traits and utilities
async-trait = "0.1"
futures = "0.3"

# Global state and lazy initialization
once_cell = "1.19"

# Error handling
thiserror = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# HTTP client (for LLM/MCP calls)
reqwest = { version = "0.11", features = ["json"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }

# Auto-registration via inventory
inventory = "0.1"

# Procedural macros for handler registration
erenflow-ai-macros = { version = "0.1", path = "../erenflow-ai-macros" }

# Tracing UI (optional)
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

# Visualization (optional, feature-gated)
image = { version = "0.25", optional = true }
imageproc = { version = "0.24", optional = true }
ab_glyph = { version = "0.2", optional = true }
ab_glyph_rasterizer = { version = "0.1", optional = true }
svg = { version = "0.13", optional = true }

[features]
default = []
# Visualization feature: generates SVG and PNG diagrams
visualization = ["image", "imageproc", "ab_glyph", "ab_glyph_rasterizer", "svg"]
# RAG feature: vector database and retrieval support
rag = []
# Observability: execution tracing, metrics, replay, failure snapshots
observability = []
# Built-in tracing UI (requires observability)
observability-ui = ["observability", "axum", "tower-http"]

[lib]
name = "erenflow_ai"
path = "src/lib.rs"

[[bin]]
name = "erenflow-ai"
path = "src/main.rs"


