[package]
name = "flowgentra-ai-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/flowgentra-ai-macros"
description = "Procedural macros for FlowgentraAI handler registration"
keywords = ["macro", "codegen", "agent", "handler", "ai"]
categories = ["development-tools", "rust-patterns"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
inventory = "0.1"
convert_case = "0.6"
